--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "formik": "^2.2.9",
     "react": "^18.2.0",
