--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
+    "redux-persist": "^6.0.0",
     "yup": "^1.1.1"
   },
   "devDependencies": {
